DeleteAllMetas now ignores ignoreNotFound parameter.
Cleaned up code. Improved documentation.

Close #318